# pico-rover

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-variants.yaml  font_generate.cmake  font_to_cpp.py  image_generate.cmake  image_to_cpp.py
.devcontainer/: Dockerfile  devcontainer.json  reinstall-pico-sdk.sh
cmake/: FreeRTOS_Kernel_posix.cmake  font_generate.cmake  image_generate.cmake
doc/: pulseview
include/: tusb_config.h
libs/: CMakeLists.txt
libs/bno055/: CMakeLists.txt
libs/bno055/include/: bno055.h
libs/bno055/src/: bno055.cpp  bno055_regs.h
libs/fbus2/: CMakeLists.txt
libs/fbus2/include/fbus2/: channels.h  mapping.h  receiver.h  receiver_pio.h  receiver_uart.h  ringbuffer.h  telemetry.h
libs/fbus2/src/: mapping.cpp  protocol.h  receiver.cpp  receiver_pio.cpp  receiver_uart.cpp  uart_rx.pio  uart_tx.pio
libs/i2c_bus/: CMakeLists.txt
libs/i2c_bus/include/: i2c_bus.h
libs/i2c_bus/src/: i2c_bus.cpp
libs/ina219/: CMakeLists.txt
libs/ina219/include/: ina219.h
libs/ina219/src/: ina219.cpp  ina219_regs.h
libs/led_strip/: CMakeLists.txt
libs/led_strip/include/led/: animation.h  color.h  colorbuffer.h  colorlayer.h  strip.h
libs/led_strip/include/led/animation/: blink.h  chase.h  headlights.h  indicators.h  knightrider.h  solid.h
libs/led_strip/src/: color.cpp  color_hsv.cpp  strip.cpp  ws2812.pio
libs/ssd1306/: CMakeLists.txt
libs/ssd1306/include/ssd1306/: display.h  fixed_12x16.font.h  fixed_16x32.font.h  fixed_5x8.font.h  fixed_8x8.font.h  font.h  framebuffer.h  framebuffer.impl.h  image.h
libs/ssd1306/src/: display.cpp  ssd1306_regs.h
src/: FreeRTOSConfig.h  board.c  boardconfig.cpp  boardconfig.h  displayrender.cpp  displayrender.h  i2c_bus.cpp  i2c_bus.h  ledrender.cpp  ledrender.h  lwipopts.h  main.c  main.cpp  robot.cpp  robot.h  rtos.c  rtos.h  telemetryprovider.cpp  telemetryprovider.h  tusb_config.h  usb_descriptors.c  usb_device.c  usb_device.h  util.h  wifi.c  wifi.h
src/debug/: debug.c  debug.cpp  debug.h
src/led/: animation.h  animation_blink.h  animation_chase.h  animation_colorcycle.h  animation_knightrider.h  animation_solid.h  color.cpp  color.h  color_hsv.cpp  colorbuffer.h  colorlayer.cpp  colorlayer.h  control.cpp  control.h  cyw43_led.cpp  cyw43_led.h  dummy.cpp  dummy.h  gpio_led.cpp  gpio_led.h  led.c  led.cpp  led.h  ledstrip.c  ledstrip.cpp  ledstrip.h  single.cpp  single.h  strip.cpp  strip.h  ws2812.pio
src/led/animation/: blink.h  chase.h  colorcycle.h  indicators.h  knightrider.h  solid.h
src/motor/: dcmotor.cpp  dcmotor.h  encoder.cpp  encoder.h  motor.c  motor.cpp  motor.h  servo.cpp  servo.h
src/oled/: control.cpp  control.h  display.cpp  display.h  fixed_12x16.font.h  fixed_16x32.font.h  fixed_5x8.font.h  fixed_8x8.font.h  font.h  framebuffer.cpp  framebuffer.h  framebuffer.impl.h  image.h  oled.c  oled.cpp  oled.h  ssd1306.h  ssd1306_display.cpp  ssd1306_display.h  ssd1306_regs.h
src/oled/resources/: fixed_12x16.font.h  fixed_16x32.font.h  fixed_5x8.font.h  fixed_8x8.font.h
src/radio/: frsky_channels.h  frsky_mapping.cpp  frsky_mapping.h  frsky_protocol.h  frsky_receiver.cpp  frsky_receiver.h  frsky_receiverlistener.cpp  frsky_receiverlistener.h  frsky_telemetry.h  radio.cpp  radio.h  receiver.c  receiver.h  telemetry.c  telemetry.h
src/ros/: client.cpp  client.h  hal.c  pico_cdc_transport.cpp  pico_cdc_transport.h  pico_tcp_transport.cpp  pico_tcp_transport.h
src/sensor/: bno0055.h  bno055.cpp  bno055_regs.h  ina219.cpp  ina219.h  pico_adc.cpp  pico_adc.h  sensors.h
src/sensors/: bno0055.h  bno055.cpp  bno055_regs.h  board_adc.c  board_adc.h  ina219.c  ina219.cpp  ina219.h  pico_adc.cpp  pico_adc.h
src/servo/: servo.c  servo.cpp  servo.h
src/telemetry/: provider.cpp  provider.h
src/util/: battery.h  callback.h  debug.cpp  debug.h  i2c_bus.cpp  i2c_bus.h  lockable.cpp  lockable.h  locking.h  mutex.h  ringbuffer.h  time.h  usb_bus.cpp  usb_bus.h
src/watchdog/: watchdog.cpp  watchdog.h
test/: CMakeLists.txt  test_animation.cpp  test_color.cpp  test_dummy.cpp  test_oled.cpp
tools/: font_to_cpp.py  image_to_cpp.py
